# rn-lingua

./: .env.schema  .gitignore  AGENTS.md  README.md  app.json  babel.config.cjs  biome.json  eas.json  env.d.ts  eslint.config.js  metro.config.cjs  package-lock.json  package.json  skills-lock.json  tsconfig.json
.agents/skills/clerk-expo-patterns/evals/: evals.json
.agents/skills/clerk-expo-patterns/templates/expo-basic-auth/: app.json  package.json
.agents/skills/clerk-expo-patterns/templates/expo-basic-auth/app/: _layout.tsx
.agents/skills/clerk-webhooks/evals/: evals.json
.agents/skills/stream/: peers.schema.json
src/: global.css
src/app/: _layout.tsx  index.tsx  language-selection.tsx  oauth-callback.tsx  onboarding.tsx
src/app/(auth)/: _layout.tsx  signin.tsx  signup.tsx
src/app/(tabs)/: _layout.tsx  ai-teacher.tsx  chat.tsx  home.tsx  learn.tsx  profile.tsx
src/app/api/stream/: audio-call+api.ts  session+api.ts
src/app/api/vision-agent/: start+api.ts  stop+api.ts
src/app/lesson/: [lessonId].tsx
src/components/: VerificationModal.tsx  custom-tab-bar.tsx
src/constants/: images.ts  lesson-artwork.ts  sounds.ts
src/data/: languages.ts  lessons.ts  todaysPlan.ts  units.ts
src/hooks/: useAuthGate.ts
src/lib/: api.ts  clerkAuth.ts  streamServer.ts  visionAgentSessions.ts
src/store/: languageStore.ts  progressStore.ts
src/theme/: colors.ts  index.ts  typography.ts
src/types/: images.d.ts  learning.ts  stream.ts
vision-agent/: README.md  main.py  pyproject.toml
(+3 files in other folders)
